Fixed: Error on no customproduct.jsnon