@@ -5,6 +5,10 @@ import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import shedbolaget.model.products.Product;
 
+import java.io.File;
+import java.net.URI;
+import java.net.URL;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
@@ -12,16 +16,14 @@ enum CustomProductWriter {
     ;
 
     public static void writeProductsToJsonFile(List<Product> customProducts, String fileName) {
+        // Create object mapper instance & use variables instead of getters
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE);
+        mapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
         try {
-            // Create object mapper instance & use variables instead of getters
-            ObjectMapper mapper = new ObjectMapper();
-            mapper.setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE);
-            mapper.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
-
-            // convert product list to JSON file
-            mapper.writeValue(Paths.get("src", "main", "resources", fileName).toFile(), customProducts);
+            mapper.writeValue(Path.of("src", "main", "resources", fileName).toFile(), customProducts);
         } catch (Exception ex) {
-            ex.printStackTrace();
+          ex.printStackTrace();
         }
     }
 }
